--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,5 +105,5 @@
     },
     "tabnine.experimentalAutoImports": true,
     "explorer.confirmDelete": false,
-    "workbench.colorTheme": "Atom One Dark"
+    "workbench.colorTheme": "Noctis Minimus"
 }
